--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,18 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "server/index.js", "use": "@vercel/node" },
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "src/**", "use": "@vercel/static" }
-  ],
   "routes": [
-    { "src": "/dashboard", "dest": "dashboard.html" },
-    { "src": "/", "dest": "dashboard.html" },
-    { "src": "/api/(.*)", "dest": "server/index.js" },
-    { "src": "/heatmap.js", "dest": "src/heatmap.js", "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization",
-        "Content-Type": "application/javascript"
-      }
+    { "handle": "filesystem" },
+    { "src": "/login", "dest": "/login.html" },
+    { "src": "/register", "dest": "/register.html" },
+    { 
+      "src": "/dashboard", 
+      "dest": "/api/auth-check?redirect=/dashboard.html" 
     },
-    { "src": "/src/(.*)", "dest": "src/$1", "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+    { 
+      "src": "/admin", 
+      "dest": "/api/auth-check?redirect=/admin.html&admin=true" 
     },
-    { "src": "/(.*)", "dest": "/$1", "headers": {
-        "Access-Control-Allow-Origin": "*", 
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
-    }
+    { "src": "/", "dest": "/api/auth-check" },
+    { "src": "/api/(.*)", "dest": "/api/$1" }
   ]
 }
