Add database test endpoint and fix server config

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     { "src": "server/index.js", "use": "@vercel/node" },
     { "src": "*.html", "use": "@vercel/static" },
-    { "src": "public/**", "use": "@vercel/static" }
+    { "src": "public/**", "use": "@vercel/static" },
+    { "src": "*.js", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/index.js" },
@@ -17,7 +18,7 @@
       "src": "/admin", 
       "dest": "server/index.js" 
     },
-    { "src": "/heatmapViewer.js", "dest": "/heatmapViewer.js" },
+    { "src": "/heatmapViewer.js", "dest": "/public/heatmapViewer.js" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/server/index.js" }
   ]
