--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,19 @@
     { "src": "src/**", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/index.js" },
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/server/index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, x-auth-token"
+      }
+    },
     { "src": "/login", "dest": "/login.html" },
     { "src": "/register", "dest": "/register.html" },
-    { "src": "/dashboard", "dest": "server/index.js" },
-    { "src": "/admin", "dest": "server/index.js" },
+    { "src": "/dashboard", "dest": "/server/index.js" },
+    { "src": "/admin", "dest": "/server/index.js" },
     { "src": "/heatmapViewer.js", "dest": "/heatmapViewer.js" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/server/index.js" }
