Add database test endpoint and fix server config

--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,7 @@
     { "src": "/dashboard", "dest": "/server/index.js" },
     { "src": "/admin", "dest": "/server/index.js" },
     { "src": "/heatmapViewer.js", "dest": "/heatmapViewer.js" },
+    { "src": "/heatmap.js", "dest": "/src/heatmap.js" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/server/index.js" }
   ]
